--- a/MyWeather.styles.css
+++ b/MyWeather.styles.css
@@ -142,9 +142,10 @@
     overflow: hidden;
 }
 
-.small-text[b-0nxzno7xo4]{
+.align-center[b-0nxzno7xo4]{
     display: flex;
     justify-content:center;
+    align-items: center;
 }
 
 .smaller-text[b-0nxzno7xo4]{
@@ -158,10 +159,6 @@
 .weather-icon[b-0nxzno7xo4]{
     width: 36px;
     height: 36px;
-}
-
-.precipitation-chance[b-0nxzno7xo4] {
-    display: flex;
 }
 
 .rain-drop-icon[b-0nxzno7xo4]{
