1. Remove JetBrains.Annotations 2. Load next 24 hour data

--- a/MyWeather.styles.css
+++ b/MyWeather.styles.css
@@ -160,6 +160,8 @@
 .weather-icon[b-0nxzno7xo4]{
     width: 36px;
     height: 36px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .rain-drop-icon[b-0nxzno7xo4]{
