1. larger font for the Refresh button 2. Prefer rain icon if more than 3 hour rains

--- a/MyWeather.styles.css
+++ b/MyWeather.styles.css
@@ -32,7 +32,7 @@
 
 .last-update-time[b-icz2rgwdbx] {
     margin-right: 5px;
-    font-size: x-small;
+    font-size: small;
 }
 
 .refresh-button[b-icz2rgwdbx] {
@@ -45,9 +45,7 @@
     cursor: pointer;
     display: inline-block;
     font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;
-    font-size: x-small;
-    font-weight: 400;
-    line-height: 1.15385;
+    font-size: small;
     margin: 0;
     outline: none;
     position: relative;
