--- a/MyWeather.styles.css
+++ b/MyWeather.styles.css
@@ -95,10 +95,14 @@
     align-items: center;
 }
 
+.footer-item-text[b-ogyyxfve86]{
+    font-size: small;
+}
+
 .rounded-corner[b-ogyyxfve86] {
     border-radius: 18px;
-    padding: 10px;
-    margin: 10px;
+    padding: 17px;
+    margin: 0 0 10px 10px;
     color: white;
 }
 
