- Make Humidity icon bigger

--- a/MyWeather.styles.css
+++ b/MyWeather.styles.css
@@ -135,6 +135,10 @@
     color: darkgray;
 }
 
+.humidity-icon[b-ogyyxfve86]{
+    width: 90px;
+    margin: -18px;
+}
 
 .favicon[b-ogyyxfve86]{
     width: 20px;
